fix: json stream data is truncated

--- a/src/components/seal-table/styles/index.less
+++ b/src/components/seal-table/styles/index.less
@@ -39,6 +39,10 @@
     border-top: 0;
     border-radius: 0 0 var(--ant-table-header-border-radius)
       var(--ant-table-header-border-radius);
+
+    .ant-empty-image {
+      height: 30px;
+    }
   }
 
   .row-wrapper {
